# bumps-tools

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-06-17-111352_create_entries/: down.sql  up.sql
src/: cmd_db.rs  cmd_query.rs  colleges.rs  crew.rs  db_entry.rs  decode.rs  main.rs  raw.rs  rw2.rs  schema.rs  year.rs
