[package]
name = "the-bumps"
version = "0.1.0"
authors = ["Matthew Else <matthewelse1997@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
diesel = { version = "2.1.0", features = ["sqlite", "nightly-error-messages"] }
nom = "7.1.3"
num-derive = "0.3"
num-traits = "0.2"
